[package]
name = "bolus"
version = "0.1.1"
edition = "2021"
description = "Library for shellcode injection using the Windows API"
authors = ["Taggart<mtaggart@taggart-tech.com"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
bytes = "1.4.0"
litcrypt = "0.3.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
sysinfo = "0.29.0"
tokio = { version = "1.28.2", features = ["full"] }
windows = { version = "0.48.0", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_System_Console", "Win32_Security", "Win32_System_Memory", "Win32_System_Threading", "Win32_System_WindowsProgramming", "Win32_System_Diagnostics_Debug", "Win32_System_ProcessStatus"] }


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
