[package]
name = "bolus"
version = "0.2.0"
edition = "2021"
description = "Library for shellcode injection using the Windows API"
authors = ["Taggart<mtaggart@taggart-tech.com"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
bytes = "1.5.0"
litcrypt = "0.3.0"
reqwest = { version = "0.11.20", features = ["blocking"] }
sysinfo = "0.29.10"
tokio = { version = "1.32.0", features = ["full"] }
windows = { version = "0.51.1", features = [
  "Win32_Foundation",
  "Win32_System_SystemServices",
  "Win32_System_Console",
  "Win32_Security",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
] }


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true
